@@ -20,7 +20,7 @@ import us.kbase.common.utils.sortjson.TooManyKeysException;
 import us.kbase.common.utils.sortjson.UTF8JsonSorterFactory;
 import us.kbase.typedobj.core.AbsoluteTypeDefId;
 import us.kbase.typedobj.core.JsonDocumentLocation;
-import us.kbase.typedobj.core.ObjectPaths;
+import us.kbase.typedobj.core.SubsetSelection;
 import us.kbase.typedobj.core.TempFilesManager;
 import us.kbase.typedobj.core.TypeDefName;
 import us.kbase.typedobj.core.ValidatedTypedObject;
@@ -45,7 +45,6 @@ import us.kbase.typedobj.idref.IdReferenceType;
 import us.kbase.typedobj.idref.RemappedId;
 import us.kbase.workspace.database.ResourceUsageConfigurationBuilder.ResourceUsageConfiguration;
 import us.kbase.workspace.database.exceptions.CorruptWorkspaceDBException;
-import us.kbase.workspace.database.exceptions.DeletedObjectException;
 import us.kbase.workspace.database.exceptions.InaccessibleObjectException;
 import us.kbase.workspace.database.exceptions.NoSuchObjectException;
 import us.kbase.workspace.database.exceptions.NoSuchReferenceException;
@@ -65,12 +64,14 @@ public class Workspace {
 	//TODO SEARCH separate service - search interface, return changes since date, store most recent update to avoid queries
 	//TODO SEARCH separate service - get object changes since date (based on type collection and pointers collection
 	//TODO SEARCH index typespecs
+	//TODO CODE look into eliminating all the DB implementation specific classes, too much of a pain just to ensure not moving objects between implementations
 	
 	public static final User ALL_USERS = new AllUsers('*');
 	
 	private final static int MAX_WS_DESCRIPTION = 1000;
 	private final static int MAX_WS_COUNT = 1000;
 	private final static int NAME_LIMIT = 1000;
+	private final static int MAX_OBJECT_SEARCH_COUNT_DEFAULT = 50000;
 	
 	private final static IdReferenceType WS_ID_TYPE = new IdReferenceType("ws");
 	
@@ -78,6 +79,7 @@ public class Workspace {
 	private ResourceUsageConfiguration rescfg;
 	private final ReferenceParser parser;
 	private final TypedObjectValidator validator;
+	private int maximumObjectSearchCount;
 	
 	public Workspace(
 			final WorkspaceDatabase db,
@@ -102,13 +104,26 @@ public class Workspace {
 		rescfg = cfg;
 		this.parser = parser;
 		db.setResourceUsageConfiguration(rescfg);
+		this.maximumObjectSearchCount = MAX_OBJECT_SEARCH_COUNT_DEFAULT;
+	}
+	
+	/* this is temporary until we have path returning code when searching for objects.
+	 * Will probably want to determine the max number of objects based on some max memory usage and
+	 * on speed.
+	 */
+	public void setMaximumObjectSearchCount(final int count) {
+		maximumObjectSearchCount = count;
+	}
+	
+	public int getMaximumObjectSearchCount() {
+		return maximumObjectSearchCount;
 	}
 	
 	public ResourceUsageConfiguration getResourceConfig() {
 		return rescfg;
 	}
 	
-	public void setResourceConfig(ResourceUsageConfiguration rescfg) {
+	public void setResourceConfig(final ResourceUsageConfiguration rescfg) {
 		if (rescfg == null) {
 			throw new NullPointerException("rescfg cannot be null");
 		}
@@ -239,9 +254,12 @@ public class Workspace {
 	}
 	
 	private Map<ObjectIdentifier, ObjectIDResolvedWS> checkPerms(
-			final WorkspaceUser user, final List<ObjectIdentifier> loi,
-			final Permission perm, final String operation,
-			final boolean allowDeleted, final boolean allowMissing,
+			final WorkspaceUser user,
+			final List<ObjectIdentifier> loi,
+			final Permission perm,
+			final String operation,
+			final boolean allowDeleted,
+			final boolean allowMissing,
 			final boolean allowInaccessible)
 			throws WorkspaceCommunicationException, InaccessibleObjectException,
 			CorruptWorkspaceDBException {
@@ -277,8 +295,7 @@ public class Workspace {
 			final ResolvedWorkspaceID r = rwsis.get(o.getWorkspaceIdentifier());
 			try {
 				checkLocked(perm, r);
-				comparePermission(user, perm, perms.getPermission(r, true), o,
-						operation);
+				comparePermission(user, perm, perms.getPermission(r, true), o, operation);
 			} catch (WorkspaceAuthorizationException wae) {
 				if (allowInaccessible) {
 					continue;
@@ -927,8 +944,8 @@ public class Workspace {
 			final WorkspaceUser user,
 			final List<ObjectIdentifier> loi)
 			throws CorruptWorkspaceDBException,
-			WorkspaceCommunicationException, InaccessibleObjectException,
-			NoSuchReferenceException, TypedObjectExtractionException {
+				WorkspaceCommunicationException, InaccessibleObjectException,
+				NoSuchReferenceException, TypedObjectExtractionException {
 			
 		return getObjects(user, loi, false);
 	}
@@ -936,10 +953,10 @@ public class Workspace {
 	public List<WorkspaceObjectData> getObjects(
 			final WorkspaceUser user,
 			final List<ObjectIdentifier> loi,
-			final boolean noData) throws
-			CorruptWorkspaceDBException, WorkspaceCommunicationException,
-			InaccessibleObjectException, NoSuchReferenceException,
-			TypedObjectExtractionException {
+			final boolean noData)
+			throws CorruptWorkspaceDBException,
+				WorkspaceCommunicationException, InaccessibleObjectException,
+				NoSuchReferenceException, TypedObjectExtractionException {
 		return getObjects(user, loi, noData, false);
 	}
 	
@@ -947,62 +964,58 @@ public class Workspace {
 			final WorkspaceUser user,
 			final List<ObjectIdentifier> loi,
 			final boolean noData,
-			boolean nullIfInaccessible) throws
-			CorruptWorkspaceDBException, WorkspaceCommunicationException,
-			InaccessibleObjectException, NoSuchReferenceException,
-			TypedObjectExtractionException {
+			boolean nullIfInaccessible)
+			throws CorruptWorkspaceDBException,
+				WorkspaceCommunicationException, InaccessibleObjectException,
+				NoSuchReferenceException, TypedObjectExtractionException {
 		
-		final ResolvedResChains res = resolveObjects(user, loi,
-				nullIfInaccessible);
+		final ResolvedRefPaths res = resolveObjects(user, loi, nullIfInaccessible);
 		
-		final Map<ObjectIDResolvedWS, Set<ObjectPaths>> chainpaths =
-				setupObjectPaths(res.hadchain);
-		final Map<ObjectIDResolvedWS, Set<ObjectPaths>> stdpaths =
-				setupObjectPaths(res.nochain);
+		final Map<ObjectIDResolvedWS, Set<SubsetSelection>> refpaths =
+				setupObjectPaths(res.withpath);
+		final Map<ObjectIDResolvedWS, Set<SubsetSelection>> stdpaths =
+				setupObjectPaths(res.nopath);
 		
 		//TODO CODE make an overall resource manager that takes the config as an arg and handles returned data as well as mem & file limits 
 		final ByteArrayFileCacheManager dataMan = getDataManager(noData);
 		
 		//this is pretty gross, think about a better api here
-		Map<ObjectIDResolvedWS,
-				Map<ObjectPaths, WorkspaceObjectData>> stddata = null;
-		Map<ObjectIDResolvedWS,
-				Map<ObjectPaths, WorkspaceObjectData>> chaindata = null;
+		Map<ObjectIDResolvedWS, Map<SubsetSelection, WorkspaceObjectData>> stddata = null;
+		Map<ObjectIDResolvedWS, Map<SubsetSelection, WorkspaceObjectData>> refdata = null;
 		try {
 			stddata = db.getObjects(stdpaths, dataMan, 0,
 					!nullIfInaccessible, false, !nullIfInaccessible);
-			chaindata = db.getObjects(chainpaths, dataMan,
-					calculateDataSize(stddata),
-					//object cannot be missing at this stage
+			refdata = db.getObjects(refpaths, dataMan, calculateDataSize(stddata),
+					//objects cannot be missing at this stage
 					false, true, true);
 			
-			chainpaths.clear();
+			refpaths.clear();
 			stdpaths.clear();
 			
-			final List<WorkspaceObjectData> ret =
-					new ArrayList<WorkspaceObjectData>();
+			final List<WorkspaceObjectData> ret = new ArrayList<>();
 			for (final ObjectIdentifier o: loi) {
-				final ObjectPaths p;
-				if (o instanceof ObjIDWithChainAndSubset) {
-					p = ((ObjIDWithChainAndSubset) o).getPaths();
+				final SubsetSelection ss;
+				if (o instanceof ObjIDWithRefPathAndSubset) {
+					ss = ((ObjIDWithRefPathAndSubset) o).getSubSet();
 				} else {
-					p = ObjectPaths.EMPTY;
+					ss = SubsetSelection.EMPTY;
 				}
 				final WorkspaceObjectData wod;
-				// works if res.nochain.get(o) is null or stddata doesn't have
-				// key
-				if (stddata.containsKey(res.nochain.get(o))) {
-					wod = stddata.get(res.nochain.get(o)).get(p);
-				} else if (chaindata.containsKey(res.hadchain.get(o))) {
-					wod = chaindata.get(res.hadchain.get(o)).get(p);
+				// works if res.nochain.get(o) is null or stddata doesn't have key
+				if (stddata.containsKey(res.nopath.get(o))) {
+					wod = stddata.get(res.nopath.get(o)).get(ss);
+				} else if (refdata.containsKey(res.withpath.get(o))) {
+					final WorkspaceObjectData prewod = refdata.get(res.withpath.get(o)).get(ss);
+					wod = prewod.updateObjectReferencePath(res.withpathRefPath.get(o));
 				} else {
 					wod = null;
 				}
 				ret.add(wod);
 			}
-			res.nochain.clear();
-			res.hadchain.clear();
-			chaindata.clear();
+			res.nopath.clear();
+			res.withpath.clear();
+			res.withpathRefPath.clear();
+			refdata.clear();
 			stddata.clear();
 			removeInaccessibleDataCopyReferences(user, ret);
 			return ret;
@@ -1010,18 +1023,18 @@ public class Workspace {
 				WorkspaceCommunicationException | InaccessibleObjectException |
 				TypedObjectExtractionException e) {
 			destroyGetObjectsResources(stddata);
-			destroyGetObjectsResources(chaindata);
+			destroyGetObjectsResources(refdata);
 			throw e;
 		}
 	}
 
 	private void destroyGetObjectsResources(
-			final Map<ObjectIDResolvedWS, Map<ObjectPaths,
+			final Map<ObjectIDResolvedWS, Map<SubsetSelection,
 					WorkspaceObjectData>> data) {
 		if (data == null) {
 			return;
 		}
-		for (final Map<ObjectPaths, WorkspaceObjectData> paths:
+		for (final Map<SubsetSelection, WorkspaceObjectData> paths:
 				data.values()) {
 			for (final WorkspaceObjectData d: paths.values()) {
 				try {
@@ -1034,10 +1047,10 @@ public class Workspace {
 	}
 
 	private long calculateDataSize(
-			final Map<ObjectIDResolvedWS, Map<ObjectPaths,
+			final Map<ObjectIDResolvedWS, Map<SubsetSelection,
 				WorkspaceObjectData>> stddata) {
 		long dataSize = 0;
-		for (final Map<ObjectPaths, WorkspaceObjectData> paths:
+		for (final Map<SubsetSelection, WorkspaceObjectData> paths:
 				stddata.values()) {
 			for (final WorkspaceObjectData d: paths.values()) {
 				if (d.hasData()) {
@@ -1065,91 +1078,100 @@ public class Workspace {
 		}
 	}
 
-	private Map<ObjectIDResolvedWS, Set<ObjectPaths>> setupObjectPaths(
+	private Map<ObjectIDResolvedWS, Set<SubsetSelection>> setupObjectPaths(
 			final Map<ObjectIdentifier, ObjectIDResolvedWS> objs) {
-		final Map<ObjectIDResolvedWS, Set<ObjectPaths>> paths =
-				new HashMap<ObjectIDResolvedWS, Set<ObjectPaths>>();
+		final Map<ObjectIDResolvedWS, Set<SubsetSelection>> paths =
+				new HashMap<ObjectIDResolvedWS, Set<SubsetSelection>>();
 		for (final ObjectIdentifier o: objs.keySet()) {
 			final ObjectIDResolvedWS roi = objs.get(o);
 			if (!paths.containsKey(roi)) {
-				paths.put(roi, new HashSet<ObjectPaths>());
+				paths.put(roi, new HashSet<SubsetSelection>());
 			}
-			if (o instanceof ObjIDWithChainAndSubset) {
-				paths.get(roi).add(((ObjIDWithChainAndSubset) o).getPaths());
+			if (o instanceof ObjIDWithRefPathAndSubset) {
+				paths.get(roi).add(((ObjIDWithRefPathAndSubset) o).getSubSet());
 			} else {
-				paths.get(roi).add(ObjectPaths.EMPTY);
+				paths.get(roi).add(SubsetSelection.EMPTY);
 			}
 		}
 		return paths;
 	}
 	
-	private Map<ObjectIdentifier, ObjectIDResolvedWS> resolveReferenceChains(
+	private ResolvedRefPaths resolveReferencePaths(
 			final WorkspaceUser user,
-			final List<ObjectIDWithRefChain> refchains,
+			final List<ObjectIDWithRefPath> objsWithRefpaths,
 			final Map<ObjectIdentifier, ObjectIDResolvedWS> heads,
 			final boolean ignoreErrors)
 			throws WorkspaceCommunicationException,
-			InaccessibleObjectException, CorruptWorkspaceDBException,
-			NoSuchObjectException, NoSuchReferenceException {
+				InaccessibleObjectException, CorruptWorkspaceDBException,
+				NoSuchObjectException, NoSuchReferenceException {
 		
-		final Map<ObjectIdentifier, ObjectIDResolvedWS> ret =
-				new HashMap<ObjectIdentifier, ObjectIDResolvedWS>();
-		if (!hasItems(refchains)) {
-			return ret;
+		if (!hasItems(objsWithRefpaths)) {
+			return new ResolvedRefPaths(null, null);
 		}
 		
-		final List<ObjectIdentifier> chains =
-				new LinkedList<ObjectIdentifier>();
-		for (final ObjectIDWithRefChain oc: refchains) {
+		final List<ObjectIdentifier> allRefPathEntries = new LinkedList<>();
+		for (final ObjectIDWithRefPath oc: objsWithRefpaths) {
 			if (oc != null) {
 				/* allow nulls in list to maintain object count in the case
 				 * calling method input includes objectIDs with and without
 				 * chains
 				 */
-				chains.addAll(oc.getChain());
+				allRefPathEntries.addAll(oc.getRefPath());
 			}
 		}
 		
 		final Map<ObjectIDResolvedWS, ObjectReferenceSet> headrefs =
-				getObjectOutGoingReferences(heads, !ignoreErrors, false);
+				db.getObjectOutgoingReferences(new HashSet<ObjectIDResolvedWS>(heads.values()),
+						!ignoreErrors, false, !ignoreErrors);
 		/* ignore all errors when getting chain objects until actually getting
 		 * to the point where we need the data. Otherwise an attacker can
 		 * explore what objects exist in arbitrary workspaces.
 		 */
-		final Map<ObjectIdentifier, ObjectIDResolvedWS> reschains =
-				checkPerms(user, chains, Permission.NONE, "somthinsbroke",
-						true, true, true);
-		final Map<ObjectIDResolvedWS, ObjectReferenceSet> chainrefs =
-				getObjectOutGoingReferences(reschains, false, true);
+		final Map<ObjectIdentifier, ObjectIDResolvedWS> resolvedRefPathObjs =
+				checkPerms(user, allRefPathEntries, Permission.NONE,
+						"somthinsbroke", true, true, true);
+		final Map<ObjectIDResolvedWS, ObjectReferenceSet> outrefs =
+				db.getObjectOutgoingReferences(new HashSet<ObjectIDResolvedWS>(
+						resolvedRefPathObjs.values()), false, true, false);
 		
-		final Map<ObjectIdentifier, ObjectIDResolvedWS> resolvedChains =
-				new HashMap<ObjectIdentifier, ObjectIDResolvedWS>();
+		final Map<ObjectIdentifier, ObjectIDResolvedWS> resolvedObjects = new HashMap<>();
+		final Map<ObjectIdentifier, List<Reference>> refpaths = new HashMap<>();
 		int chnum = 1;
-		for (final ObjectIDWithRefChain chain: refchains) {
-			if (chain != null) {
-				final ObjectReferenceSet refs = headrefs.get(heads.get(chain));
-				if (refs != null && isValidRefChain(chain, refs, reschains,
-						chainrefs, ignoreErrors, chnum)) {
-					resolvedChains.put(chain, reschains.get(chain.getLast()));
+		for (final ObjectIDWithRefPath owrp: objsWithRefpaths) {
+			if (owrp != null) {
+				final ObjectReferenceSet refs = headrefs.get(heads.get(owrp));
+				if (refs != null) {
+					final List<Reference> resRefPath = getResolvedRefPath(owrp, refs,
+							resolvedRefPathObjs, outrefs, ignoreErrors, chnum);
+					if (resRefPath != null) {
+						final Reference ref = resRefPath.get(resRefPath.size() - 1);
+						final ObjectIDResolvedWS end = resolvedRefPathObjs.get(owrp.getLast());
+						final ObjectIDResolvedWS res = new ObjectIDResolvedWS(
+								end.getWorkspaceIdentifier(), ref.getObjectID(), ref.getVersion());
+						resolvedObjects.put(owrp, res);
+						refpaths.put(owrp, resRefPath);
+					}
 				}
 			}
 			chnum++;
 		}
-		return resolvedChains;
+		return new ResolvedRefPaths(resolvedObjects, refpaths);
 	}
 	
-	private boolean isValidRefChain(
-			final ObjectIDWithRefChain chain,
-			final ObjectReferenceSet headref,
-			final Map<ObjectIdentifier, ObjectIDResolvedWS> reschains,
-			final Map<ObjectIDResolvedWS, ObjectReferenceSet> chainrefs,
+	private List<Reference> getResolvedRefPath(
+			final ObjectIDWithRefPath refpath,
+			final ObjectReferenceSet headrefs,
+			final Map<ObjectIdentifier, ObjectIDResolvedWS> resRefPathObjs,
+			final Map<ObjectIDResolvedWS, ObjectReferenceSet> outgoingRefs,
 			final boolean ignoreErrors,
 			final int chainNumber)
 			throws NoSuchReferenceException {
-		ObjectIdentifier pos = chain;
-		ObjectReferenceSet refs = headref;
+		final List<Reference> resolvedRefPath = new LinkedList<>();
+		ObjectIdentifier pos = refpath;
+		ObjectReferenceSet refs = headrefs;
+		resolvedRefPath.add(refs.getObjectReference());
 		int posnum = 1;
-		for (final ObjectIdentifier oi: chain.getChain()) {
+		for (final ObjectIdentifier oi: refpath.getRefPath()) {
 			/* refs are guaranteed to exist, so if the db didn't find
 			 * it the user specified it incorrectly
 			 */
@@ -1157,21 +1179,20 @@ public class Workspace {
 			 * place, otherwise an attacker can tell if the object in the
 			 * ref chain is in the DB or not
 			 */
-			final ObjectIDResolvedWS oir = reschains.get(oi);
-			final ObjectReferenceSet current = oir == null ? null :
-				chainrefs.get(oir);
-			if (current == null ||
-					!refs.contains(current.getObjectReference())) {
+			final ObjectIDResolvedWS oir = resRefPathObjs.get(oi);
+			final ObjectReferenceSet current = oir == null ? null : outgoingRefs.get(oir);
+			if (current == null || !refs.contains(current.getObjectReference())) {
 				if (ignoreErrors) {
-					return false;
+					return null;
 				}
 				throwNoSuchRefException(pos, oi, chainNumber, posnum);
 			}
+			resolvedRefPath.add(current.getObjectReference());
 			pos = oi;
 			refs = current;
 			posnum++;
 		}
-		return true;
+		return resolvedRefPath;
 	}
 
 	private boolean hasItems(final List<?> l) {
@@ -1188,7 +1209,9 @@ public class Workspace {
 
 	private void throwNoSuchRefException(
 			final ObjectIdentifier from,
-			final ObjectIdentifier to, int chnum, int posnum)
+			final ObjectIdentifier to,
+			final int chnum,
+			final int posnum)
 			throws NoSuchReferenceException {
 		throw new NoSuchReferenceException(
 				String.format(
@@ -1207,58 +1230,6 @@ public class Workspace {
 				from, to);
 	}
 
-	private Map<ObjectIDResolvedWS, ObjectReferenceSet>
-			getObjectOutGoingReferences(
-				final Map<ObjectIdentifier, ObjectIDResolvedWS> objs,
-				final boolean exceptIfMissingOrDeleted,
-				final boolean includeDeleted)
-				throws WorkspaceCommunicationException, NoSuchObjectException {
-		final Map<ObjectIDResolvedWS, ObjectReferenceSet> refs;
-		try {
-			refs = db.getObjectOutgoingReferences(
-					new HashSet<ObjectIDResolvedWS>(objs.values()),
-					exceptIfMissingOrDeleted, includeDeleted,
-					exceptIfMissingOrDeleted);
-		} catch (NoSuchObjectException nsoe) {
-			final ObjectIDResolvedWS e = nsoe.getResolvedInaccessibleObject();
-			for (Entry<ObjectIdentifier, ObjectIDResolvedWS> entry:
-					objs.entrySet()) {
-				if (entry.getValue().equals(e)) {
-					throw new NoSuchObjectException(
-							formatInaccessibleObjectException(
-									entry.getKey(), nsoe),
-							entry.getValue(), nsoe);
-				}
-				
-			}
-			throw new RuntimeException("Something went very wrong here", nsoe);
-		}
-		return refs;
-	}
-	
-	private static String formatInaccessibleObjectException(
-			final ObjectIdentifier oi,
-			final InaccessibleObjectException nsoe) {
-		final StringBuilder sb = new StringBuilder("Object ");
-		sb.append(oi.getIdentifierString());
-		sb.append(oi.getVersion() == null ? "" :
-			" with version " + oi.getVersion());
-		if (nsoe instanceof DeletedObjectException) {
-			sb.append(" in workspace ");
-		} else if (nsoe instanceof NoSuchObjectException) {
-			sb.append(" does not exist in workspace ");
-		} else {
-			sb.append(" in workspace ");
-		}
-		sb.append(oi.getWorkspaceIdentifierString());
-		if (nsoe instanceof DeletedObjectException) {
-			sb.append(" has been deleted");
-		} else if (!(nsoe instanceof NoSuchObjectException)) {
-			sb.append(" is inaccessible");
-		}
-		return sb.toString();
-	}
-	
 	private void removeInaccessibleDataCopyReferences(
 			final WorkspaceUser user,
 			final List<WorkspaceObjectData> data)
@@ -1376,49 +1347,71 @@ public class Workspace {
 		return db.getObjectHistory(ws.get(oi));
 	}
 	
-	private static class ResolvedResChains {
-		public Map<ObjectIdentifier, ObjectIDResolvedWS> nochain;
-		public Map<ObjectIdentifier, ObjectIDResolvedWS> hadchain;
+	private static class ResolvedRefPaths {
+		public Map<ObjectIdentifier, ObjectIDResolvedWS> nopath;
+		public Map<ObjectIdentifier, ObjectIDResolvedWS> withpath;
+		public Map<ObjectIdentifier, List<Reference>> withpathRefPath;
 
-		private ResolvedResChains(
-				final Map<ObjectIdentifier, ObjectIDResolvedWS> nochain,
-				final Map<ObjectIdentifier, ObjectIDResolvedWS> hadchain) {
+		private ResolvedRefPaths(
+				final Map<ObjectIdentifier, ObjectIDResolvedWS> withpath,
+				final Map<ObjectIdentifier, List<Reference>> withpathRefPath) {
 			super();
-			this.nochain = nochain;
-			this.hadchain = hadchain;
+			this.withpath = withpath;
+			if (withpath == null) {
+				this.withpath = new HashMap<>();
+			}
+			this.withpathRefPath = withpathRefPath;
+			if (withpathRefPath == null) {
+				this.withpathRefPath = new HashMap<>();
+			}
+		}
+		
+		public ResolvedRefPaths withStandardObjects(
+				final Map<ObjectIdentifier, ObjectIDResolvedWS> std) {
+			if (std == null) {
+				nopath = new HashMap<>();
+			} else {
+				nopath = std;
+			}
+			return this;
+		}
+
+		public ResolvedRefPaths merge(final ResolvedRefPaths merge) {
+			nopath.putAll(merge.nopath);
+			withpath.putAll(merge.withpath);
+			withpathRefPath.putAll(merge.withpathRefPath);
+			return this;
 		}
 		
 	}
 	
 	public List<ObjectInformation> getObjectInformation(
-			final WorkspaceUser user, final List<ObjectIdentifier> loi,
-			final boolean includeMetadata, final boolean nullIfInaccessible)
-			throws WorkspaceCommunicationException, CorruptWorkspaceDBException,
-			InaccessibleObjectException, NoSuchReferenceException {
+			final WorkspaceUser user,
+			final List<ObjectIdentifier> loi,
+			final boolean includeMetadata,
+			final boolean nullIfInaccessible)
+			throws WorkspaceCommunicationException,
+				CorruptWorkspaceDBException, InaccessibleObjectException,
+				NoSuchReferenceException {
 	
-		final ResolvedResChains res = resolveObjects(user, loi,
-				nullIfInaccessible);
+		final ResolvedRefPaths res = resolveObjects(user, loi, nullIfInaccessible);
 		
-		final Map<ObjectIDResolvedWS, ObjectInformation> stdmeta = 
-				db.getObjectInformation(
-						new HashSet<ObjectIDResolvedWS>(res.nochain.values()),
-						includeMetadata, !nullIfInaccessible, false,
-						!nullIfInaccessible);
-		final Map<ObjectIDResolvedWS, ObjectInformation> resmeta = 
-				db.getObjectInformation(
-						new HashSet<ObjectIDResolvedWS>(res.hadchain.values()),
-						includeMetadata, false, true, true);
-						// at this point the object at the chain end must exist
-		final List<ObjectInformation> ret =
-				new ArrayList<ObjectInformation>();
+		final Map<ObjectIDResolvedWS, ObjectInformation> stdmeta = db.getObjectInformation(
+				new HashSet<ObjectIDResolvedWS>(res.nopath.values()),
+				includeMetadata, !nullIfInaccessible, false, !nullIfInaccessible);
 		
+		final Map<ObjectIDResolvedWS, ObjectInformation> resmeta = db.getObjectInformation(
+				new HashSet<ObjectIDResolvedWS>(res.withpath.values()),
+				includeMetadata, false, true, true);
+				// at this point the object at the chain end must exist
+		
+		final List<ObjectInformation> ret = new ArrayList<>();
 		for (final ObjectIdentifier o: loi) {
-			if (res.nochain.containsKey(o) &&
-					stdmeta.containsKey(res.nochain.get(o))) {
-				ret.add(stdmeta.get(res.nochain.get(o)));
-			} else if (res.hadchain.containsKey(o) &&
-					resmeta.containsKey(res.hadchain.get(o))) {
-				ret.add(resmeta.get(res.hadchain.get(o)));
+			if (res.nopath.containsKey(o) && stdmeta.containsKey(res.nopath.get(o))) {
+				ret.add(stdmeta.get(res.nopath.get(o)));
+			} else if (res.withpath.containsKey(o) && resmeta.containsKey(res.withpath.get(o))) {
+				ret.add(resmeta.get(res.withpath.get(o))
+						.updateReferencePath(res.withpathRefPath.get(o)));
 			} else {
 				ret.add(null);
 			}
@@ -1427,47 +1420,280 @@ public class Workspace {
 	}
 
 	/* used to resolve object IDs that might contain reference chains */
-	private ResolvedResChains resolveObjects(final WorkspaceUser user,
-			final List<ObjectIdentifier> loi, final boolean nullIfInaccessible)
+	private ResolvedRefPaths resolveObjects(
+			final WorkspaceUser user,
+			final List<ObjectIdentifier> loi,
+			final boolean nullIfInaccessible)
 			throws WorkspaceCommunicationException,
-			InaccessibleObjectException, CorruptWorkspaceDBException,
-			NoSuchObjectException, NoSuchReferenceException {
-
-		final Map<ObjectIdentifier, ObjectIDResolvedWS> ws = 
-				checkPerms(user, loi, Permission.READ, "read",
-						nullIfInaccessible, nullIfInaccessible,
-						nullIfInaccessible);
-		
-		final List<ObjectIDWithRefChain> chains =
-				new LinkedList<ObjectIDWithRefChain>();
-		final Map<ObjectIdentifier, ObjectIDResolvedWS> heads =
-				new HashMap<ObjectIdentifier, ObjectIDResolvedWS>();
-		final Map<ObjectIdentifier, ObjectIDResolvedWS> std =
-				new HashMap<ObjectIdentifier, ObjectIDResolvedWS>();
+				InaccessibleObjectException, CorruptWorkspaceDBException,
+				NoSuchObjectException, NoSuchReferenceException {
+		if (loi.isEmpty()) {
+			throw new IllegalArgumentException("No object identifiers provided");
+		}
+		Set<ObjectIdentifier> lookup = new HashSet<>();
+		List<ObjectIdentifier> nolookup = new LinkedList<>();
 		for (final ObjectIdentifier o: loi) {
-			if (ws.get(o) == null) {
-				continue;
+			if (o instanceof ObjectIDWithRefPath && ((ObjectIDWithRefPath) o).isLookupRequired()) {
+				lookup.add(o);
+			} else {
+				nolookup.add(o);
 			}
-			if (o instanceof ObjectIDWithRefChain && 
-					((ObjectIDWithRefChain) o).hasChain()) {
-				chains.add((ObjectIDWithRefChain) o);
+		}
+
+		//handle the faster cases first, fail before the searches
+		Map<ObjectIdentifier, ObjectIDResolvedWS> ws = new HashMap<>();
+		if (!nolookup.isEmpty()) {
+			ws = checkPerms(user, nolookup, Permission.READ, "read",
+						nullIfInaccessible, nullIfInaccessible, nullIfInaccessible);
+		}
+		nolookup = null; //gc
+		
+		final List<ObjectIDWithRefPath> refpaths = new LinkedList<>();
+		final Map<ObjectIdentifier, ObjectIDResolvedWS> heads = new HashMap<>();
+		final Map<ObjectIdentifier, ObjectIDResolvedWS> std = new HashMap<>();
+		for (final ObjectIdentifier o: loi) {
+			if (lookup.contains(o)) { // need to do a lookup on this one, skip
+				refpaths.add(null); //maintain count for error reporting
+			} else if (ws.get(o) == null) { // skip, workspace wasn't resolved
+				// error reporting is off, so no need to keep track of location in list
+			} else if (o instanceof ObjectIDWithRefPath &&
+					((ObjectIDWithRefPath) o).hasRefPath()) {
+				refpaths.add((ObjectIDWithRefPath) o);
 				heads.put(o, ws.get(o));
 			} else {
-				chains.add(null); // maintain count for error reporting
+				refpaths.add(null); // maintain count for error reporting
 				std.put(o, ws.get(o));
 			}
 		}
-		ws.clear(); //GC
+		ws = null; //GC
+
+		// this should exclude any heads that are deleted, even if nullIfInaccessible is true
+		// do this before starting the search, fail early before the expensive part
+		final ResolvedRefPaths resolvedPaths = resolveReferencePaths(
+				user, refpaths, heads, nullIfInaccessible).withStandardObjects(std);
 		
-		// this should exclude any heads that are deleted, even if
-		// nullIfInaccessible is true
-		final Map<ObjectIdentifier, ObjectIDResolvedWS> reschains =
-				resolveReferenceChains(user, chains, heads,
-						nullIfInaccessible);
-		
-		return new ResolvedResChains(std, reschains);
+		return resolvedPaths.merge(searchObjectDAG(user, lookup, nullIfInaccessible));
 	}
 	
+	//TODO REF LOOKUP PATH1 return reference path
+	//TODO REF LOOKUP PATH2 keep reference search tree in memory - calc mem
+	//TODO REF LOOKUP PATH3 prune tree on 1) dead end, 2) node already in tree (path must be shorter than current path)
+	//TODO REF LOOKUP PATH4 delete tree if > max mem size, & delete before pulling objects
+	//TODO REF LOOKUP positive and negative caches (?)
+
+	/* Modifies lookup in place to remove objects that don't need lookup.
+	 * Note the reference path returned for looked up objects is currently incorrect. 
+	 */
+	private ResolvedRefPaths searchObjectDAG(
+			final WorkspaceUser user,
+			final Set<ObjectIdentifier> lookup,
+			final boolean nullIfInaccessible)
+			throws WorkspaceCommunicationException, InaccessibleObjectException,
+				CorruptWorkspaceDBException {
+		if (lookup.isEmpty()) {
+			return new ResolvedRefPaths(null, null).withStandardObjects(null);
+		}
+		//could make a method to just get IDs of workspace with specific permission to save mem
+		PermissionSet pset = db.getPermissions(user, Permission.READ, false);
+		Map<WorkspaceIdentifier, ResolvedWorkspaceID> rwsis =
+				searchObjectsResolveWorkspaces(lookup);
+		Map<ObjectIdentifier, ObjectIDResolvedWS> resobjs = new HashMap<>();
+		final Map<ObjectIdentifier, ObjectIDResolvedWS> nolookup = new HashMap<>();
+		final Iterator<ObjectIdentifier> oiter = lookup.iterator();
+		while (oiter.hasNext()) {
+			final ObjectIdentifier o = oiter.next();
+			final ResolvedWorkspaceID rwsi = rwsis.get(o.getWorkspaceIdentifier());
+			if (rwsi != null) {
+				final ObjectIDResolvedWS oid = o.resolveWorkspace(rwsi);
+				if (pset.hasWorkspace(rwsi) && !rwsi.isDeleted()) { // workspace has read perm
+					nolookup.put(o, oid);
+					oiter.remove();
+				} else {
+					resobjs.put(o, oid);
+				}
+			}
+		}
+		final Set<Long> wsIDs = searchObjectsGetWorkspaceIDs(pset);
+		pset = null;
+		rwsis = null;
+		
+		Map<ObjectIDResolvedWS, ObjectReferenceSet> startrefs =
+				db.getObjectIncomingReferencesForObjIDs(new HashSet<>(resobjs.values()));
+		// this differs from resobjs in that the resolved objects are absolute
+		final Map<ObjectIdentifier, ObjectIDResolvedWS> resObjectIDs = new HashMap<>();
+		final Map<ObjectIdentifier, Set<Reference>> searchSet = new HashMap<>();
+		for (final ObjectIdentifier o: lookup) {
+			final ObjectIDResolvedWS res = resobjs.get(o);
+			final ObjectReferenceSet refset = startrefs.get(res);
+			if (refset != null) { // the object id is valid
+				final Reference objref = refset.getObjectReference();
+				resObjectIDs.put(o, new ObjectIDResolvedWS(res.getWorkspaceIdentifier(),
+						objref.getObjectID(), objref.getVersion()));
+				searchSet.put(o, refset.getReferenceSet());
+			} else {
+				// don't throw errors yet so users can't probe arbitrary workspaces
+				searchSet.put(o, new HashSet<Reference>());
+			}
+		}
+		resobjs = null;
+		startrefs = null;
+		// preprocessing done, move on to the main event
+		return searchObjectDAG(user, wsIDs, resObjectIDs, searchSet, nullIfInaccessible)
+				.withStandardObjects(nolookup);
+	}
+
+	private Set<Long> searchObjectsGetWorkspaceIDs(final PermissionSet pset) {
+		final Set<Long> wsids = new HashSet<>();
+		for (final ResolvedWorkspaceID rwsi: pset.getWorkspaces()) {
+			if (!rwsi.isDeleted()) {
+				wsids.add(rwsi.getID());
+			}
+		}
+		return wsids;
+	}
+
+	private Map<WorkspaceIdentifier, ResolvedWorkspaceID> searchObjectsResolveWorkspaces(
+			final Set<ObjectIdentifier> lookup)
+			throws WorkspaceCommunicationException {
+		final Set<WorkspaceIdentifier> wsis = new HashSet<>();
+		for (final ObjectIdentifier o: lookup) {
+			wsis.add(o.getWorkspaceIdentifier());
+		}
+		try {
+			return db.resolveWorkspaces(wsis, true, true);
+		} catch (NoSuchWorkspaceException e) {
+			throw new RuntimeException("Threw exception when explicitly told not to", e);
+		}
+	}
+	
+	private ResolvedRefPaths searchObjectDAG(
+			final WorkspaceUser user,
+			final Set<Long> wsids,
+			final Map<ObjectIdentifier, ObjectIDResolvedWS> resObjectIDs,
+			final Map<ObjectIdentifier, Set<Reference>> searchrefs,
+			final boolean nullIfInaccessible)
+			throws InaccessibleObjectException, WorkspaceCommunicationException {
+		int refcount = 0;
+		for (final Set<Reference> refs: searchrefs.values()) {
+			refcount += 1 + refs.size(); // 1 for the starting object
+		}
+		final ResolvedRefPaths resolvedPaths = new ResolvedRefPaths(null, null); //init empty
+		if (refCountExceeded(refcount, !nullIfInaccessible)) {
+			return resolvedPaths;
+		}
+		findReadableReferences(wsids, searchrefs, resolvedPaths, resObjectIDs);
+		while (!searchrefs.isEmpty()) {
+			final Iterator<ObjectIdentifier> oiter = searchrefs.keySet().iterator();
+			Set<Reference> query = new HashSet<Reference>();
+			while (oiter.hasNext()) {
+				final ObjectIdentifier o = oiter.next();
+				final Set<Reference> refs = searchrefs.get(o);
+				if (refs.isEmpty()) {
+					if (nullIfInaccessible) { // just skip errors
+						oiter.remove();
+					} else {
+						// only throw errors here so users can't probe arbitrary workspaces
+						// errors are thrown from same place whether on 1st or later iterations
+						throwSearchDAGFailed(user, o);
+					}
+				} else { // could just always do this, has no effect, but since checking anyway...
+					query.addAll(refs);
+				}
+			}
+			Map<Reference, ObjectReferenceSet> res = db.getObjectIncomingReferences(query);
+			query = null;
+			
+			for (final ObjectIdentifier oi: searchrefs.keySet()) {
+				final Set<Reference> newrefs = getNewRefsFromOldRefs(
+						user, searchrefs.get(oi), res);
+				refcount += newrefs.size();
+				searchrefs.put(oi, newrefs);
+			}
+			if (refCountExceeded(refcount, !nullIfInaccessible)) {
+				return resolvedPaths;
+			}
+			res = null;
+			findReadableReferences(wsids, searchrefs, resolvedPaths, resObjectIDs);
+		}
+		return resolvedPaths;
+	}
+
+	private void throwSearchDAGFailed(final WorkspaceUser user, final ObjectIdentifier o)
+			throws InaccessibleObjectException {
+		final String verString = o.getVersion() == null ? "The latest version of " :
+				String.format("Version %s of ", o.getVersion());
+		final String userStr = user == null ? "anonymous users" : "user " + user.getUser();
+		throw new InaccessibleObjectException(String.format(
+				"%sobject %s in workspace %s is not accessible to %s",
+				verString, o.getIdentifierString(), o.getWorkspaceIdentifierString(), userStr));
+	}
+	
+	private boolean refCountExceeded(final int refcount, final boolean throwException)
+			throws InaccessibleObjectException {
+		if (refcount > maximumObjectSearchCount) {
+			if (throwException) {
+				throw new InaccessibleObjectException("Reached reference search limit");
+			} else {
+				return true;
+			}
+		} else {
+			return false;
+		}
+	}
+	
+	private Set<Reference> getNewRefsFromOldRefs(
+			final WorkspaceUser user,
+			final Set<Reference> increfs,
+			final Map<Reference, ObjectReferenceSet> res)
+					throws InaccessibleObjectException {
+		final Set<Reference> newrefs = new HashSet<Reference>();
+		for (final Reference r: increfs) {
+			newrefs.addAll(res.get(r).getReferenceSet());
+		}
+		return newrefs;
+	}
+	
+	/* Modifies searchrefs in place to remove objects with valid ref paths.
+	 * Modifies resolvedPaths in place to add objects with valid ref paths and fake paths.
+	 */
+	private void findReadableReferences(
+			final Set<Long> wsids,
+			final Map<ObjectIdentifier, Set<Reference>> searchrefs,
+			final ResolvedRefPaths resolvedPaths,
+			final Map<ObjectIdentifier, ObjectIDResolvedWS> resObjectIDs)
+			throws WorkspaceCommunicationException {
+		Set<Reference> readable = new HashSet<>();
+		for (final ObjectIdentifier o: searchrefs.keySet()) {
+			for (final Reference r: searchrefs.get(o)) {
+				if (wsids.contains(r.getWorkspaceID())) {
+					readable.add(r);
+				}
+			}
+		}
+		if (readable.isEmpty()) {
+			return;
+		}
+		final Map<Reference, Boolean> exists = db.getObjectExistsRef(readable);
+		readable = null;
+		final Iterator<ObjectIdentifier> oiter = searchrefs.keySet().iterator();
+		while (oiter.hasNext()) {
+			final ObjectIdentifier o = oiter.next();
+			for (final Reference r: searchrefs.get(o)) {
+				if (exists.containsKey(r) && exists.get(r)) { //search over
+					//TODO REF LOOKUP need to handle path here
+					// is absolute at this point, made these absolute earlier
+					final ObjectIDResolvedWS res = resObjectIDs.get(o);
+					final Reference targetObj = new Reference(
+							res.getWorkspaceIdentifier().getID(), res.getId(), res.getVersion());
+					resolvedPaths.withpath.put(o, res);
+					resolvedPaths.withpathRefPath.put(o, Arrays.asList(targetObj)); //TODO REF LOOKUP this is wrong!
+					oiter.remove();
+					break;
+				}
+			}
+		}
+	}
+
 	/** Get object names based on a provided prefix. Returns at most 1000
 	 * names in no particular order. Intended for use as an auto-completion
 	 * method.
